--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,12 @@
+<p>
 <%= @player_1_name %> vs <%= @player_2_name %>
-
+</br>
 <%= @player_2_name%> HP:100
+</p>
+
+<form action="/attack">
+  <input type="submit" value="Attack">
+</form>
+
+#Alternative way of doing it, using a link:
+#<a href="/attack">Attack</a>
